# deploy-demo-app

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  Makefile  Procfile  README.md  config.mk  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.aptible/: .aptible.yml  Procfile  migrations
.circleci/: config.yml
.docker/: config.json.enc
.github/workflows/: build-and-push.yml  git-deploy.yaml  porter_demo_app_web.yml  preview.yml
app/: app.py  config.py  databases.py  honcho.cnf  migrations.py  models.py  worker.py
app/static/: all.css
app/templates/: index.html
scripts/: server-entrypoint.sh
