[metadata]
name = deploy-demo-app
version = 1.0.0
description = A demo app that can be deployed on Aptible!
long_description = file: README.md
license = All Rights Reserved

[options]
packages = find:
install_requires =
  flask
  flask_wtf
  gunicorn
  psycopg2
  redis
  rq
  sqlalchemy
  wtforms

[options.extras_require]
dev =
  black
  isort
